syntax = "proto3";
package proto;

service WalletCore {
  rpc Address (addressReq) returns (AddressResp);
  rpc SignTx (SignTxReq) returns (SignTxResp);
  rpc SendToAddressSignBTC (SendToAddressReq) returns (SignTxResp);
}

message addressReq {
  string asset = 1;
}

message AddressResp {
  string address = 1;
}

message SignTxReq{
  string  network = 1;
  string  asset = 2;
  string  from = 3;
  int64   vinAmount = 4;
  string hexUnsignedTx = 5;
}

message SignTxResp {
  bool result  = 1;
  string hexSignedTx = 2;
}

message SendToAddressReq {
  message PreviousOutPoint {
    string address = 1;
    string txid = 2;
    uint32 index = 3;
  }
  repeated PreviousOutPoint utxo = 1;
  int64   vinAmount = 2;
  string hexUnsignedTx = 3;
}
